--- a/chats.html
+++ b/chats.html
@@ -29,12 +29,13 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="far fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span><a href="setting.html"><i class="fas fa-cog fa-lg"></i></a></span>
       </div>
     </div>
     </header>
     <div class="white"></div>
     <main class="main-screen">
+      <a href="chatting.html">
       <div class="user-component">
         <div class="user-component__column user-component__border">
           <img
@@ -53,12 +54,13 @@
             <div class="badge">1</div>
         </div>
       </div>
+      </a>
       
       <div class="user-component">
         <div class="user-component__column user-component__border">
           <img
             src="screenshots/fa.PNG"
-            class="user-component__avatar user-component__avatar--"
+            class="user-component__avatar"
           />
 
           <div class="user-component__text">
@@ -102,6 +104,9 @@
         </li>
       </ul>
     </nav>
+    <div id="no-mobile">
+      <span>Your screen is too big </span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/47d6d10abb.js"
