--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       <input type="submit" value="Sign Up" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
+    <div id="no-mobile">
+      <span>Your screen is too big </span>
+    </div>
     <script
       src="https://kit.fontawesome.com/47d6d10abb.js"
       crossorigin="anonymous"
