--- a/index1.html
+++ b/index1.html
@@ -29,6 +29,9 @@
       <p>Kokoa clone</p>
       <a href="index.html"><i class="fas fa-adjust fa-10x"></a></i>
     </div>
+    <div id="no-mobile">
+      <span>Your screen is too big </span>
+    </div>
     <script
       src="https://kit.fontawesome.com/47d6d10abb.js"
       crossorigin="anonymous"
