--- a/chatting.html
+++ b/chatting.html
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-      <div class="message-row message-row__own">
+      <div class="message-row__own">
         <div class="message-row__content">
           <div class="message__info">
             <span class="message__bubble">공부하는 중!</span>
